--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,9 @@ body > div:first-of-type{
 #contactIcons a#blogger i:hover{
     color:#ff5722;
 }
+#contactIcons a#codepen i:hover{
+    color:black;
+}
 .push{
     padding: 1em 0em;
 }
@@ -425,4 +428,59 @@ body > div:first-of-type{
 }
 .panel{
     box-shadow: none;
+}
+/*new hero image */
+.hero {
+  background: url("../images/hero_image.jpg") no-repeat center center;
+  background-size: cover;
+  height: 100vh; }
+  .hero:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom right, #536a78, rgba(48, 129, 130, 0.88));
+    opacity: .8; }
+  .hero .intro {
+    padding: 2em;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%); }
+  .hero h1 {
+    color: #fff;
+    font-size: 1.5em;
+    line-height: 1.5em;
+    letter-spacing: -0.025em;
+    font-weight: 300;
+    text-align: center; }
+  .hero h2 {
+    color: #fff;
+    font-size: 1.1em;
+    line-height: 1.1em;
+    font-weight: 200;
+    text-align: center;
+    margin-bottom: 2em; }
+  .hero .my-img {
+    background: url("../images/image6.jpg") no-repeat center center;
+    background-size: cover;
+    height: 6em;
+    width: 6em;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto; }
+  @media only screen and (min-width: 40.063em) {
+    .hero .my-img {
+      height: 10em;
+      width: 10em; }
+    .hero h1 {
+      font-size: 2.5em; }
+    .hero h2 {
+          font-size: 1.5em; 
+          line-height: 1.5em;
+      }
+     }
+.hero .portfolio{
+  text-align:center;
 }
