--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,31 @@ footer {
 body > div:first-of-type{
    box-shadow: 0px 0px 4px rgba(153, 153, 153, 0.88);
 }
+.bg_load {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background: #EEE;
+}
+
+.wrapper {
+    /* Size and position */
+    font-size: 1em; /* 1em */
+    width: 10em;
+    height: 10em;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    margin-top: -5em;
+    margin-left: -5em;
+    background-image: url("../images/Loading_icon.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .footnote img{
     width:4em;height:4em;display:inline-block!important;
 }
@@ -70,6 +95,7 @@ body > div:first-of-type{
 }
 .push{
     padding: 1em 0em;
+    clear:both;
 }
 .icon-menu3, .icon-menu4{
     font-size: 20px;
@@ -429,7 +455,7 @@ body > div:first-of-type{
 }
 /*new hero image */
 .hero {
-  background: url("https://github.com/shivangidas/images-for-codepen/blob/master/IMG_20170204_131511872.jpg?raw=true") no-repeat center center;
+  background: url("../images/IMG_20170204_131511872.jpg") no-repeat center center;
   background-size: cover;
    }
   .hero:before {
@@ -444,8 +470,7 @@ body > div:first-of-type{
   .hero .intro {
     padding: 2em;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%); }
+    top: 20%; }
   .hero h1 {
     color: #fff;
     font-size: 2em;
